--- a/Readme
+++ b/Readme
@@ -8,32 +8,30 @@ View services offered
 Book a service
 Make enquiries
 Manage client information and payments
+
 Technologies Used
 HTML: For structuring the web pages.
 CSS: For styling the web pages.
 JavaScript: For adding interactivity to the web pages.
 Node.js: For backend server functionality (handled by server.js).
+
 Project Structure
 index.html: The main HTML file for the website.
 styles.css: Contains all CSS styles for the website.
 script.js: Contains JavaScript code for interactivity.
 server.js: Node.js server file for handling backend logic.
+
+
 How to Use
 Clone the Repository
-
-
 git clone https://github.com/username/repository-name.git
 cd repository-name
 Install Dependencies Ensure you have Node.js installed. Install the necessary npm packages:
 
-
 npm install
 Run the Server Start the server to run the website locally:
-
-
 node server.js
 The website will be available at http://localhost:3000.
-
 Open in Browser Navigate to http://localhost:3000 in your web browser to view the website.
 
 Features
@@ -59,7 +57,7 @@ Contributing
 Feel free to fork the repository and submit pull requests. For major changes, please open an issue to discuss before making changes.
 
 License
-This project is licensed under the MIT License - see the LICENSE file for details.
+This project is original work.
 
 Acknowledgements
 Thanks to the contributors and libraries used in the development of this project.
